<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
	<!ENTITY appname "Slideshow">
	<!ENTITY author "Michael Standen">
	]>

<resources>
	<string name="app_name">&appname;</string>
	<string name="action_settings">Settings</string>
	<string name="action_credits">About</string>
	<string name="action_change_log">Change Log</string>
	<string name="action_controls">Controls</string>
	<string name="action_picture_in_picture">Picture in Picture</string>

	<string name="no_picture_in_picture">Picture in picture is not supported by your device.</string>

	<!-- List -->
	<string name="inaccessible">(inaccessible)</string>
	<string name="go_home_folder">Stuck? Click to go Home</string>
	<string name="play_folder">Play Slideshow from here</string>

	<!-- Slideshow -->
	<string name="title_activity_image">&appname;</string>

	<string name="delete_button">Delete</string>
	<string name="delete_dialog_title">Delete image</string>
	<string name="delete_dialog_message">Are you sure?</string>
	<string name="image_deleted">Image deleted</string>
	<string name="image_not_deleted">Unable to delete image</string>

	<string name="share_button">Share</string>
	<string name="share_via">Share via&#8230;</string>

	<string name="image_detail_dimensions">Dimensions: %1$dx%2$d</string>
	<string name="image_detail_size">File Size: %1$s</string>
	<string name="image_detail_modified">Modified: %1$s</string>

	<string name="toast_error_loading_image">Error occurred during loading image</string>
	<string name="toast_no_files">No files to show</string>

	<string name="toast_paused">Paused</string>
	<string name="toast_resumed">Resumed</string>
	<string name="toast_completed">Completed</string>

	<string name="toast_input_blocked">Input blocked. Long press to enable</string>
	<string name="toast_input_allowed">Input enabled</string>

	<string name="long_loading_warning">%1$s is taking a long time to load.</string>
	<string name="long_loading_skipping">%1$s is taking a long time to load. Skipping.</string>
	<string name="long_loading_skip_action">Skip</string>

	<!-- Controls -->
	<string name="controls_title">&appname; Controls</string>
	<string name="controls_content1">There are a couple hidden controls when viewing a slideshow.</string>
	<string name="controls_content2">*Swipe left / right* to change to next / previous image.</string>
	<string name="controls_content3">*Single tap* to start / stop the slideshow.</string>
	<string name="controls_content5">*Double tap* to pause the slideshow without showing the details panel.</string>
	<string name="controls_content4">*Long press during the slideshow* to disable user input. This is handy when you don\'t want grandma to accidentally stop the slideshow when she is dusting the device.</string>

	<!-- Image descriptions -->
	<string name="image_description">Image</string>
	<string name="logo_description">Logo</string>

	<!-- Credits -->
	<string name="title_activity_credits">About &appname;</string>
	<string name="credits_creator">by <a href="https://michael.standen.link">&author;</a></string>
	<string name="credits_content1">&appname; is a simple application for viewing images on your
		phone.
	</string>
	<string name="credits_content2">With no bells or whistles, this application is the simplest
		slideshow application on the market.
	</string>
	<string name="credits_content3">You can view the source code, log bugs or request features on
		<a href="https://github.com/Screaminghawk/android-slideshow">Github</a>.
	</string>
	<string name="credits_content4">This application is completely free and open source; licensed
		under the <a href="https://tldrlegal.com/license/mit-license">MIT license</a>.
	</string>
	<string name="credits_content5">Thank you to <a href="https://github.com/psyanite">Yan Tsui</a>
		for testing and designing the &appname; icon.
	</string>
	<string name="credits_content6">This translation of &appname; is brought to you by
		<a href="https://michael.standen.link">&author;</a>.
	</string>

	<!-- Settings -->

	<string name="title_activity_settings">Settings</string>

	<string name="pref_title_show_hidden_files">Show hidden files</string>
	<string name="pref_description_show_hidden_files">Displays files that are hidden by other
		file managers.
	</string>

	<string name="pref_title_show_thumbnails">Show thumbnails</string>
	<string name="pref_description_show_thumbnails">Displays thumbnail images. Turning this off will
		increase performance, however you will not be able to see which files are images and which
		are not.
	</string>

	<string name="pref_title_remember_location">Start in last location</string>
	<string name="pref_description_remember_location">When opened, &appname; will start in the
		location that a slideshow was last used.
	</string>

	<string name="pref_title_auto_start">Start Automatically</string>
	<string name="pref_description_auto_start">When opened, &appname; will start a slideshow from the
		last image that was displayed.
	</string>

	<string name="pref_title_play_from_here">Enable "Play from here" button</string>
	<string name="pref_description_play_from_here">The "Play from here" button appears in the file
		list and allow you to begin a slideshow from the current folder, including all sub folders.
		This feature is disabled by default as it may have a negative performance impact.
	</string>

	<string name="pref_title_enable_gif_support">Enable GIF support</string>
	<string name="pref_description_enable_gif_support">Automatically play GIFs when displayed.
		Requires Glide image loading.
	</string>

	<string name="pref_title_use_device_root">Use device root</string>
	<string name="pref_description_use_device_root">Enable navigation to the root directory of the
		device. This will enable access to files anywhere on the device, including mounted storage
		such as SD cards. Note: May require a rooted device to work correctly.
	</string>

	<string name="pref_title_slide_delay">Slide delay</string>
	<string name="pref_description_slide_delay">Click to change the number of seconds an image will
		be shown before changing to the next image.
	</string>

	<string name="pref_title_image_strategy">Use Glide to load images</string>
	<string name="pref_description_image_strategy">Use Glide to load images. Glide has support for
		other features, such as preloading and GIF support. Turning this off will enable to old custom image loading
		strategy. This has better performance on some devices.
	</string>

	<string name="pref_title_preload_images">Preload images</string>
	<string name="pref_description_preload_images">Load the next image during the current slide.
		Disabling this feature may increase performance on some devices. Requires Glide image loading.
	</string>

	<string name="pref_title_auto_rotate_dimen">Auto rotate by dimensions</string>
	<string name="pref_description_auto_rotate_dimen">Automatically rotate images into landscape mode
		when the image is wider than it is high.
	</string>

	<string name="pref_title_skip_long_load">Skip long loading images</string>
	<string name="pref_description_skip_long_load">Skip images that take too long to load during
		slideshow. A notification will be displayed when this happens.
	</string>

	<string name="pref_title_image_details">Show image details</string>
	<string name="pref_description_image_details">Overlay image details during slideshow when paused.
	</string>

	<string name="pref_title_image_details_during">Show image details during slideshow</string>
	<string name="pref_description_image_details_during">Overlay image details during slideshow when
		slideshow is running.
	</string>

	<string name="pref_title_action_on_complete">Behaviour when slideshow is complete</string>
	<array name="pref_list_title_action_on_complete">
		<item>Restart</item>
		<item>Stop</item>
		<item>Pause</item>
	</array>
	<array name="pref_list_description_action_on_complete">
		<item>Restart the slideshow from the beginning</item>
		<item>Stop the slideshow</item>
		<item>Pause the slideshow</item>
	</array>
	<string name="pref_default_value_action_on_complete">Restart</string>
	<array name="pref_list_values_action_on_complete">
		<item>Restart</item>
		<item>Stop</item>
		<item>Pause</item>
	</array>

	<string name="pref_title_reverse_order">Reverse order</string>
	<string name="pref_description_reverse_order">Display the images in the slideshow in reverse
		order.
	</string>

	<string name="pref_title_refresh_folder">Refresh Folder</string>
	<string name="pref_description_refresh_folder">Refresh the folder every time through the show.
	</string>

	<string name="pref_title_random_order">Random order</string>
	<string name="pref_description_random_order">Display the images in the slideshow in a random
		order.
	</string>

	<string name="pref_title_delete_warning">Warn before deleting</string>
	<string name="pref_description_delete_warning">Display a warning pop up before deleting an image.
		Disable at your own risk.
	</string>

	<string name="pref_title_show_clock">Show clock</string>
	<string name="pref_description_show_clock">Display a clock over the slideshow.
	</string>
</resources>
