<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<SwitchPreference
		android:defaultValue="false"
		android:key="show_hidden_files"
		android:summary="@string/pref_description_show_hidden_files"
		android:title="@string/pref_title_show_hidden_files"/>

	<SwitchPreference
		android:defaultValue="true"
		android:key="show_thumbnails"
		android:summary="@string/pref_description_show_thumbnails"
		android:title="@string/pref_title_show_thumbnails"/>

	<SwitchPreference
		android:defaultValue="false"
		android:key="use_device_root"
		android:summary="@string/pref_description_use_device_root"
		android:title="@string/pref_title_use_device_root"/>

	<EditTextPreference
		android:defaultValue="3"
		android:key="slide_delay"
		android:summary="@string/pref_description_slide_delay"
		android:title="@string/pref_title_slide_delay"
		android:inputType="numberDecimal" />

	<SwitchPreference
		android:defaultValue="false"
		android:key="stop_on_complete"
		android:summary="@string/pref_description_stop_on_complete"
		android:title="@string/pref_title_stop_on_complete"/>

	<SwitchPreference
		android:defaultValue="false"
		android:key="reverse_order"
		android:summary="@string/pref_description_reverse_order"
		android:title="@string/pref_title_reverse_order"/>

	<SwitchPreference
		android:defaultValue="false"
		android:key="random_order"
		android:summary="@string/pref_description_random_order"
		android:title="@string/pref_title_random_order"/>

	<!-- NOTE: EditTextPreference accepts EditText attributes. -->
	<!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
	<!--<EditTextPreference
		android:capitalize="words"
		android:defaultValue="@string/pref_default_display_name"
		android:inputType="textCapWords"
		android:key="example_text"
		android:maxLines="1"
		android:selectAllOnFocus="true"
		android:singleLine="true"
		android:title="@string/pref_title_display_name"/>-->

	<!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
	<!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
	<!--<ListPreference
		android:defaultValue="-1"
		android:entries="@array/pref_example_list_titles"
		android:entryValues="@array/pref_example_list_values"
		android:key="example_list"
		android:negativeButtonText="@null"
		android:positiveButtonText="@null"
		android:title="@string/pref_title_add_friends_to_messages"/>-->

</PreferenceScreen>
