<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/activity_credits"
	android:layout_width="match_parent"
	android:layout_height="match_parent">


	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?android:attr/actionBarSize"
			app:popupTheme="@style/AppTheme.PopupOverlay" />

	</android.support.design.widget.AppBarLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		tools:ignore="UselessParent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:orientation="vertical"
			tools:context="link.standen.michael.slideshow.CreditsActivity">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@mipmap/ic_launcher"
				android:layout_gravity="center_horizontal"
				android:contentDescription="@string/logo_description"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="center"
				android:paddingTop="@dimen/credits_padding"
				android:text="@string/app_name"
				android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

			<TextView
				android:id="@+id/credits_version"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="center"
				android:paddingBottom="@dimen/credits_padding"
				android:text="@string/credits_creator"/>

			<TextView
				android:id="@+id/credits_creator"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAlignment="center"
				android:padding="@dimen/credits_padding"
				android:text="@string/credits_creator"/>

			<TextView
				android:id="@+id/credits_content1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/credits_padding"
				android:text="@string/credits_content1"/>

			<TextView
				android:id="@+id/credits_content2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/credits_padding"
				android:text="@string/credits_content2"/>

			<TextView
				android:id="@+id/credits_content3"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/credits_padding"
				android:text="@string/credits_content3"/>

			<TextView
				android:id="@+id/credits_content4"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/credits_padding"
				android:text="@string/credits_content4"/>

			<TextView
				android:id="@+id/credits_content5"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/credits_padding"
				android:text="@string/credits_content5"/>

			<TextView
				android:id="@+id/credits_content6"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/credits_padding"
				android:text="@string/credits_content6"/>

		</LinearLayout>
	</ScrollView>
</android.support.design.widget.CoordinatorLayout>
