<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
			 xmlns:tools="http://schemas.android.com/tools"
			 android:layout_width="match_parent"
			 android:layout_height="match_parent"
			 android:background="@color/image_background"
			 tools:context="link.standen.michael.slideshow.ImageActivity">

	<ImageView
		android:id="@+id/fullscreen_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center"
		android:keepScreenOn="true"
		android:contentDescription="@string/image_description"/>

	<!-- Image Details Overlay -->
	<LinearLayout
		android:id="@+id/image_details"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|start"
		android:orientation="vertical"
		android:visibility="gone"
		android:background="@color/black_overlay"
		android:padding="@dimen/overlay_padding">

		<TextView
			android:id="@+id/image_detail_dimensions"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/primary"/>
		<TextView
			android:id="@+id/image_detail_size"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/primary"/>
		<TextView
			android:id="@+id/image_detail_modified"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/primary"/>

	</LinearLayout>

	<!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fitsSystemWindows="true">

		<LinearLayout
			android:id="@+id/fullscreen_content_controls"
			style="?metaButtonBarStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom|center_horizontal"
			android:background="@color/black_overlay"
			android:orientation="horizontal"
			tools:ignore="UselessParent">

			<Button
				android:id="@+id/delete_button"
				style="?metaButtonBarButtonStyle"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/delete_button"/>

			<Button
				android:id="@+id/share_button"
				style="?metaButtonBarButtonStyle"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/share_button"/>

		</LinearLayout>
	</FrameLayout>

</FrameLayout>
